feat(examples) rails
