# api/app/models/concerns/visible.rb
@@ -1,0 +1,12 @@
+module Visible
+    extend ActiveSupport::Concern
+    VALID_STATUSES = ["public", "private", "archived"]
+
+    included do
+        validates :status, inclusion: { in: VALID_STATUSES }
+    end
+
+    def archived?
+        status == "archived"
+    end
+end
