# web-app/src/generated/openapi.yaml
@@ -144,7 +144,6 @@ paths:
                 $ref: '#/components/schemas/ArticleOperation.NotFoundArticle'
       tags:
         - comment
-        - article
     post:
       operationId: createArticleComment
       parameters:
@@ -170,7 +169,6 @@ paths:
                 $ref: '#/components/schemas/ArticleOperation.NotFoundArticle'
       tags:
         - comment
-        - article
       requestBody:
         required: true
         content:
@@ -252,6 +250,7 @@ components:
         - id
         - title
         - body
+        - status
       properties:
         id:
           $ref: '#/components/schemas/ArticleId'
@@ -259,6 +258,10 @@ components:
           $ref: '#/components/schemas/ArticleTitle'
         body:
           $ref: '#/components/schemas/ArticleBody'
+        status:
+          oneOf:
+            - $ref: '#/components/schemas/ArticleStatus'
+          nullable: true
       description: |-
         Generated by scaffdog
         feature name is article
@@ -315,6 +318,8 @@ components:
           $ref: '#/components/schemas/CommentBody'
         commenter:
           $ref: '#/components/schemas/Commenter'
+        status:
+          $ref: '#/components/schemas/CommentStatus'
     ArticleId:
       type: integer
     ArticleOperation.CreateArticleDTO:
@@ -322,11 +327,16 @@ components:
       required:
         - title
         - body
+        - status
       properties:
         title:
           $ref: '#/components/schemas/ArticleTitle'
         body:
           $ref: '#/components/schemas/ArticleBody'
+        status:
+          oneOf:
+            - $ref: '#/components/schemas/CommentStatus'
+          nullable: true
     ArticleOperation.NotFoundArticle:
       type: object
     ArticleOperation.ParameterInavlid:
@@ -341,6 +351,12 @@ components:
           $ref: '#/components/schemas/ArticleTitle'
         body:
           $ref: '#/components/schemas/ArticleBody'
+    ArticleStatus:
+      type: string
+      enum:
+        - public
+        - private
+        - archived
     ArticleTitle:
       type: string
       minLength: 1
@@ -360,6 +376,7 @@ components:
         - id
         - commenter
         - body
+        - status
       properties:
         id:
           $ref: '#/components/schemas/CommentId'
@@ -367,11 +384,21 @@ components:
           $ref: '#/components/schemas/Commenter'
         body:
           $ref: '#/components/schemas/CommentBody'
+        status:
+          oneOf:
+            - $ref: '#/components/schemas/CommentStatus'
+          nullable: true
     CommentBody:
       type: string
       minLength: 1
     CommentId:
       type: integer
+    CommentStatus:
+      type: string
+      enum:
+        - public
+        - private
+        - archived
     Commenter:
       type: string
       minLength: 1
